--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,13 @@ body {
     text-wrap: balance;
   }
 }
+
+@keyframes keyframes-fill {
+  0% {
+    transform: rotate(0deg) scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: rotate(-10deg) scale(1.2);
+  }
+}
